Xv: use aligned height to calculate Xv buffer size

Make sure it's large enough for the tiling mode so the
CS checker doesn't complain.  Should fix:
https://bugs.freedesktop.org/show_bug.cgi?id=34567

Signed-off-by: Alex Deucher <alexdeucher@gmail.com>